k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cloudops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - cloudops_user
                - -d
                - cloudops_db
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - cloudops_user
                - -d
                - cloudops_db
            initialDelaySeconds: 15
            periodSeconds: 10

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
