k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cloudops
  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
